# YRX-Web-Reverse-OJ

./: .gitignore  package-lock.json  pyproject.toml  readme.md  test.py
q1/: hash.js  solve1.py
q11/: hook.py  solve11.py
q12/: solve12.py
q13/: solve13.py
q15/: solve15.py
q16/: solve16.py  webpack.js
q17/: solve17.py
q19/: solve19.py
q2/: sign.js  solve2.py
q20/: solve20.py
q3/: solve3.py
q4/: solve4.py
q5/: sign.js  solve5.py
q6/: sign.js  solve6.py
q7/: font.xml  fonttool.py  solve7.py  woff2ttf.py
q8/: baiduapi.py  solve8.py
